核心功能 第二章

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,4 +1,5 @@
 server.port=8080
+server.servlet.context-path=/community
 
 spring.thymeleaf.cache=false
 
@@ -21,3 +22,15 @@ mybatis.configuration.mapUnderscoreToCamelCase=true
 # logger
 #logging.level.com.nowcoder.community=debug
 #logging.file=d:/BaiduNetdiskDownload/data/community.log
+
+#MailProperties
+spring.mail.host=smtp.qq.com
+spring.mail.post=465
+spring.mail.username=273627658@qq.com
+spring.mail.password=lyrlejtujtpwcbbh
+spring.mail.protocol=smtps
+spring.mail.properties.mail.smtp.ssl.enable=true
+
+# community
+community.path.domain=http://localhost:8080
+community.path.upload=D:/BaiduNetdiskDownload/data/upload
