增添了点赞,关注功能,使用Redis优化登录模块

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -34,3 +34,10 @@ spring.mail.properties.mail.smtp.ssl.enable=true
 # community
 community.path.domain=http://localhost:8080
 community.path.upload=D:/BaiduNetdiskDownload/data/upload
+
+#redis
+spring.redis.database=11
+spring.redis.host= 118.31.16.137
+spring.redis.post= 6379
+spring.redis.password= Wzb199808.
+
