--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -41,3 +41,8 @@ spring.redis.host= 118.31.16.137
 spring.redis.post= 6379
 spring.redis.password= Wzb199808.
 
+#KafkaProperties
+spring.kafka.bootstrap-servers=localhost:9092
+spring.kafka.consumer.group-id=community-consumer-group
+spring.kafka.consumer.enable-auto-commit=true
+spring.kafka.consumer.auto-commit-interval=3000
