[new]增加置顶、加精、删除帖子功能 [new]增加热帖排行,网络数据统计功能

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,48 +1,5 @@
-server.port=8080
-server.servlet.context-path=/community
+#profile
+spring.profiles.active=develop
 
-spring.thymeleaf.cache=false
-
-# DataSourceProperties
-spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
-spring.datasource.url=jdbc:mysql://118.31.16.137:3306/community?useUnicode=true&characterEncoding=utf-8&serverTimezone=Asia/Shanghai
-spring.datasource.username=root
-spring.datasource.password=Wzb199808.
-spring.datasource.type=com.zaxxer.hikari.HikariDataSource
-spring.datasource.hikari.maximum-pool-size=15
-spring.datasource.hikari.minimum-idle=5
-spring.datasource.hikari.idle-timeout=30000
-
-# MybatisProperties
-mybatis.mapper-locations=classpath:mapper/*.xml
-mybatis.type-aliases-package=com.nowcoder.community.entity
-mybatis.configuration.useGeneratedKeys=true
-mybatis.configuration.mapUnderscoreToCamelCase=true
-
-# logger
-#logging.level.com.nowcoder.community=debug
-#logging.file=d:/BaiduNetdiskDownload/data/community.log
-
-#MailProperties
-spring.mail.host=smtp.qq.com
-spring.mail.post=465
-spring.mail.username=273627658@qq.com
-spring.mail.password=lyrlejtujtpwcbbh
-spring.mail.protocol=smtps
-spring.mail.properties.mail.smtp.ssl.enable=true
-
-# community
-community.path.domain=http://localhost:8080
-community.path.upload=D:/BaiduNetdiskDownload/data/upload
-
-#redis
-spring.redis.database=11
-spring.redis.host= 118.31.16.137
-spring.redis.post= 6379
-spring.redis.password= Wzb199808.
-
-#KafkaProperties
-spring.kafka.bootstrap-servers=localhost:9092
-spring.kafka.consumer.group-id=community-consumer-group
-spring.kafka.consumer.enable-auto-commit=true
-spring.kafka.consumer.auto-commit-interval=3000
+#logback
+logging.config=classpath:logback-spring-${spring.profiles.active}.xml
